feat(clothes): 重构衣物相关功能
- 修改衣物实体结构，移除 imageUrl 字段
- 新增 ClothesMainPage VO 类用于展示衣物主页面信息
-重构 ClothesService 接口，更新 getClothes 方法返回类型
- 实现 ClothesServiceImpl 中的衣物添加、查询、更新和删除功能- 更新 FileUtil 类，将 uploadImage 方法改为 uploadFile
-调整 ClothesDTO 中的 imageUrl 列表改为 fileIds 列表
- 更新数据库表结构，增加 file 表和 clothes_file 关联表